--- a/style.css
+++ b/style.css
@@ -97,3 +97,30 @@ section {
   flex-wrap: wrap;
   width: 40vw;
 }
+
+/* Map */
+.map-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: white;
+  padding: 1rem;
+  color: black;
+}
+
+.grid-item {
+  background-color: white;
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  padding: 3vw;
+  font-size: 2.5rem;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.grid-item:hover {
+  border: 6px solid #e74c3c;
+}
+
+.map-section h1 {
+  margin-top: 1rem;
+}
