--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ button {
   padding: 2rem 4rem;
   font-size: 2rem;
   cursor: pointer;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 button:hover {
@@ -118,9 +118,35 @@ section {
 }
 
 .grid-item:hover {
-  border: 6px solid #e74c3c;
+  border: 10px solid #e74c3c;
 }
 
 .map-section h1 {
   margin-top: 1rem;
+}
+
+/* Materials */
+.stats {
+  display: flex;
+  flex-direction: column;
+}
+
+.mat-section {
+  flex-direction: column;
+}
+
+.mat-section button {
+  margin-top: 2rem;
+}
+
+/* Tech */
+.tech-section {
+  flex-direction: column;
+}
+
+/* Soldier */
+.soldier-section {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
